# RealSphericalHarmonicsOBJ

./: .gitignore  LICENSE  README.md  pyproject.toml  realspherical.py  requirements.txt
src/realsphericalharmonicsobj/: realspherical.py
