[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "RealSphericalHarmonicsOBJ"
version = "0.1.0"
description = "Real spherical harmonics utilities for OBJ generation"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Lukas Allen-Rump" }]

# Add the actual deps from requirements.txt here (edit as needed)
dependencies = [
  "numpy>=1.20.0",
  "scipy>=1.11.0",
  "trimesh>=4.0.0"
]

[project.urls]
Repository = "https://github.com/lksrmp/RealSphericalHarmonicsOBJ"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["realsphericalharmonicsobj*"]

[project.scripts]
realspherical = "realsphericalharmonicsobj.realspherical:main"